@@ -1,6 +1,7 @@
 2010-09-22  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-toolbar.el: Add comment and format toolbar item.
+	Auto save toolbarshow setting.
 
 	* Add lisp/w32-browser.el
 
